--- a/frontend/src/styles/header.module.css
+++ b/frontend/src/styles/header.module.css
@@ -5,3 +5,10 @@
     padding: 10px;
     display: inline-block;
 }
+.logo {
+    width: 50px;
+    height: auto;
+}
+.logoField {
+    display: flex;
+}
