--- a/frontend/src/pages/admin/admin.module.css
+++ b/frontend/src/pages/admin/admin.module.css
@@ -7,7 +7,7 @@
     height: 7rem;
     /* border-bottom: 1px solid black; */
     margin-bottom: 5vh;
-    background-color: aliceblue;
+    background-color: lightskyblue;
 }
 .sidebar{
     padding: 0;
@@ -17,12 +17,13 @@
 }
 
 .adminAva{
+    display: flex;
     font-size: x-large;
     position: absolute;
     right: 3%;
     bottom: 20%;
 }
 
-.adminAva svg{
-    font-size: xx-large;
+.adminAva .avatar{
+    margin-right: 2vh;
 }
