--- a/frontend/src/pages/admin/adminHome.module.css
+++ b/frontend/src/pages/admin/adminHome.module.css
@@ -1,7 +1,10 @@
-.box{
-    height: 10vh;
-    border: 1px solid black;
-    border-radius: 10px;
+.card{
     margin-right: 20px;
     margin-bottom: 5vh;
+}
+.content{
+    margin-top: 5vh;
+}
+.cardHead{
+    font-weight: bold;
 }
