--- a/frontend/src/pages/user/study/render.module.css
+++ b/frontend/src/pages/user/study/render.module.css
@@ -1,8 +1,12 @@
+.background {
+    background-color: #d9d9d9;
+    padding-top: 3rem;
+    height: 100vh;
+}
 .card{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 3rem;
     width: 50%;
 }
 .btn{
