--- a/frontend/src/pages/user/study/lesson.module.css
+++ b/frontend/src/pages/user/study/lesson.module.css
@@ -1,3 +1,6 @@
+.layout {
+    height: 100vh;
+}
 .card{
     display: block;
     margin-left: auto;
@@ -14,4 +17,9 @@
 }
 .progressbar {
     margin-bottom: 20px;
+}
+@media (max-width: 767.98px) {
+    .card {
+        width: 90%
+    }
 }
