--- a/frontend/src/pages/user/ranking/ranking.module.css
+++ b/frontend/src/pages/user/ranking/ranking.module.css
@@ -24,9 +24,21 @@
 
 .rankTable{
     border: 1px solid black;
+    width: 60%;
     border-radius: 10px;
-    margin: 10vh 30vh 10vh 30vh;
+    display: block;
+    margin: 100px auto;
 }
 .rankTable h2{
     text-align: center;
+}
+@media (max-width: 767.98px) {
+    .layout {
+        height: 100vh;
+    }
+    .rankTable {
+        width: 80%;
+        margin-top: 200px;
+        margin-bottom: 200px;
+    }
 }
